--- a/VeglegesFilmKolcsonzo/View/Registration.xaml
+++ b/VeglegesFilmKolcsonzo/View/Registration.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="VeglegesFilmKolcsonzo.View.LoginPage"
+    x:Class="VeglegesFilmKolcsonzo.View.Registration"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:VeglegesFilmKolcsonzo.View"
@@ -10,7 +10,7 @@
 
     <Grid x:Name="LayoutRoot" Background="#555555" Width="400" Height="300">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="250" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -19,7 +19,7 @@
         </Grid.RowDefinitions>
         <TextBlock Grid.Row="0" Grid.Column="0" 
                 FontWeight="Bold" 
-               Text="Movies Rental Company" HorizontalAlignment="Center" VerticalAlignment="Center" />
+               Text="Contoso Corporation" HorizontalAlignment="Center" VerticalAlignment="Center" />
         <Grid x:Name="FormLayoutGrid" Grid.Row="1" Grid.Column="0" Margin="0,0,0,58" Grid.RowSpan="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
@@ -29,19 +29,19 @@
                 <RowDefinition Height="*" />
                 <RowDefinition Height="*" />
                 <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <TextBlock Grid.Row="0" Grid.Column="0" Text="Username" Margin="10" 
                    HorizontalAlignment="Center" VerticalAlignment="Center" />
             <TextBox Grid.Row="0" Grid.Column="1" Margin="10" Name="Username"/>
             <TextBlock Grid.Row="1" Grid.Column="0" Text="Password" Margin="10" 
                    HorizontalAlignment="Center" VerticalAlignment="Center" />
-            <PasswordBox Grid.Row="1" Grid.Column="1" Margin="10" Name="Password" />
-            <Button Grid.Row="2" Grid.Column="0"  
-                    HorizontalAlignment="Center" VerticalAlignment="Center"
-                    Content="Registration" Click="Registration">
-            </Button>
-            <Button Grid.Row="2" Grid.Column="1"  HorizontalAlignment="Center" VerticalAlignment="Center"
-                    Content="Log in" Click="Login">
+            <PasswordBox Grid.Row="1" Grid.Column="1" Margin="10" Name="Password"/>
+            <TextBlock Grid.Row="2" Grid.Column="0" Text="Password again" Margin="10" 
+                   HorizontalAlignment="Center" VerticalAlignment="Center" />
+            <PasswordBox Grid.Row="2" Grid.Column="1" Margin="10" Name="PasswordAgain"/>
+            <Button Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" 
+                    Content="Registrate" Margin="96,0,0,0"  Click="Registrate">
             </Button>
 
         </Grid>
